# reticulum-spec

./: .gitignore  .pre-commit-config.yaml  .yamllint  pyproject.toml  reticulum-wire-format-specification.md
.github/workflows/: spec-ci.yml
spec/: README-SCHEMA-VNEXT.md  reticulum-wire-format.ssot.yaml
spec/rules/: spectral.ssot.yaml
spec/schema/: reticulum-wire-format.ssot.schema.json
tests/: test_ssot_schema_vnext.py  test_vectors.py
tests/fixtures/: ssot_vnext_clean.yaml
tests/vectors/: hashable_part.yaml  ifac_masking.yaml  link_id_from_linkrequest.yaml  signalling_bytes.yaml
tools/: compile_ssot.py  extract_refs.py  generate_vectors.py  validate_ssot.py
